kubernetes/scraping-api-backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: scraping-api-backend
  labels:
    name: scraping-api-backend
    app: scraping-api-backend
spec:
  containers:
    - name: scraping-api-backend
      image: mucks/scraping-api-backend:latest
      resources:
        limits:
          memory: "256Mi"
          cpu: "500m"
      ports:
        - containerPort: 3000
