kubernetes/scraping-api-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scraping-api-backend
  namespace: scraping-api
spec:
  selector:
    app: scraping-api-backend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
